# OpenTimelineIO

docs/design/: editorial_design.md
docs/tutorials/: quickstart.md
src/: CMakeLists.txt
src/openedit/: CMakeLists.txt  editAlgorithms.cpp  editAlgorithms.h  editEvent.cpp  editEvent.h  errorStatus.cpp  errorStatus.h  version.h
src/opentimelineio/: CMakeLists.txt  composition.cpp  composition.h  errorStatus.cpp  errorStatus.h  track.cpp  track.h  typeRegistry.cpp
src/opentimelineio/algos/: CMakeLists.txt  editAlgorithms.cpp  editAlgorithms.h  editEvent.h
src/opentimelineio/edit/: CMakeLists.txt  edit.cpp  edit.h  editAlgorithms.cpp  editAlgorithms.h  insertItemEdit.cpp  insertItemEdit.h  insertItemEvent.cpp  modifyItemSourceRange.cpp  modifyItemSourceRange.h  removeItemEdit.cpp  removeItemEdit.h
src/opentimelineio/event/: CMakeLists.txt  event.cpp  event.h  eventStack.cpp  eventStack.h  eventType.cpp  eventType.h  registry.cpp  registry.h
src/py-opentimelineio/openedit-bindings/: CMakeLists.txt  openedit_algorithms.cpp  openedit_bindings.h
src/py-opentimelineio/opentimelineio/: __init__.py  edit.py
src/py-opentimelineio/opentimelineio-bindings/: CMakeLists.txt  otio_bindings.cpp  otio_bindings.h  otio_event.cpp  otio_serializableObjects.cpp  otio_utils.h
src/py-opentimelineio/opentimelineio/edit/: __init__.py
src/py-opentimelineio/opentimelineio/event/: __init__.py
tests/: test_events.py
